<resources>
    <string name="app_name">Atanke</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="diccionario">Diccionario</string>
    <string name="lectura">Lectura</string>
    <string name="traductor">Traductor</string>
    <string name="practica">Practica</string>
    <string name="perfil">Perfil</string>
    <string name="title_notifications">Notifications</string>
    <string name="RecordarContrasena">Recordar Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="Contrasena">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="siAunNoTienes">Si aun no tiene cuenta</string>
    <string name="registreseAqui">Registrate aqui</string>
    <string name="logo">logo</string>
    <string name="Espanol">Español</string>
    <string name="kankuamo">Kankuamo</string>
    <string name="ingresarTexto">Ingresar texto...</string>
    <string name="traduccion">Traduccion...</string>
    <string name="cambiarIdioma">Cambiar Idioma</string>
    <string name="sugerir_traduccion">Sugerir traduccion</string>
    <string name="agregar_traduccion">Agregar traduccion</string>
    <string name="traductorr">Traductor</string>
    <string name="seleccionar_idioma">Seleccionar idioma</string>
    <string name="traduccionn">Traduccion</string>
    <string name="palabra">Palabra</string>
    <string name="palabras">Palabras</string>
    <string name="pronunciaci_n">Pronunciación</string>
    <string name="nuestra_comunidad">Sé parte de nuestra comunidad de traductores</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dp_already_have_an_account">¿Ya tienes una cuenta?</string>
    <string name="correo">Correo</string>
    <string name="fecha_creacion">Fecha Creación</string>
    <string name="estado">Estado</string>
    <string name="no_traduccion">No se puede traducir, verifica la conexion y vuelve a intentarlo</string>
    <string name="todos">Todos</string>
    <string name="cuentos">Cuentos</string>
    <string name="tradiciones">Tradiciones</string>
    <string name="tx_fecha">yyyy-MM-dd HH:mm</string>

    <string-array name="tipos_archivo">

        <item>Foto</item>
    </string-array>

    <string name="game_view_content_description">Game view</string>

</resources>