<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_diccionario"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/diccionario" />

    <item
        android:id="@+id/navigation_lectura"
        android:icon="@drawable/ic_baseline_auto_stories_24"
        android:title="@string/lectura" />

    <item
        android:id="@+id/navigation_traductor"
        android:icon="@drawable/ic_baseline_translate_24"
        android:title="@string/traductor" />

    <item
        android:id="@+id/navigation_practica"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/practica" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil" />




</menu>