<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dp_app_background"
    android:focusableInTouchMode="true"
    android:fillViewport="true"
    tools:context=".ui.registrarse.Registrarse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="10sp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_spacing_xxLarge"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/atanke"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/editNombreUsu"
            style="@style/DPEditText.Normal"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editCorreo"
            style="@style/DPEditText.Normal"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editContrasena"
            style="@style/DPEditText.Normal"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegistrarse"
            style="@style/DPButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_spacing_large"
            android:text="@string/registrarse" />
    <LinearLayout
        android:id="@+id/llDoctorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_spacing_standard_new"
        android:layout_marginEnd="@dimen/dp_spacing_standard_new"
        android:layout_marginTop="@dimen/dp_spacing_middle">

        <TextView
            style="@style/DPSubHeading"
            android:text="@string/dp_already_have_an_account" />

        <TextView
            android:id="@+id/tvSignIn"
            style="@style/DPSubHeading"
            android:layout_marginStart="@dimen/dp_spacing_control_half"
            android:textColor="@color/teal_700"
            android:text="@string/iniciarSesion" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>