<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.traductor.TraduccionFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:background="@drawable/bg_fondo_verde_borde">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:maxWidth="36dp"
                android:maxHeight="36dp"
                android:src="@drawable/banderasp" />

            <TextView
                android:id="@+id/btnIdioma1"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Espanol"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bordegris"
                android:contentDescription="@string/cambiarIdioma"
                android:minHeight="48dp"
                android:src="@drawable/ic_baseline_change_circle_24"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/btnIdioma2"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kankuamo"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:maxWidth="36dp"
                android:maxHeight="36dp"
                android:src="@drawable/atanbande" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="31dp"
            android:background="@drawable/bordeverde"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="10sp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/colorPrimary" />

                    <ImageView
                        android:id="@+id/btnVoz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="10sp"
                        android:src="@drawable/ic_baseline_volume_up_24" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:id="@+id/btnclear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="10sp"
                    android:src="@drawable/ic_baseline_close_24" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTraducir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:gravity="start|top"
                android:hint="@string/ingresarTexto"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minHeight="150sp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:scrollbars="vertical"
                android:textColorHint="#373535"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/recordingbubble"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/recordingbubble" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:background="@drawable/bordefondoverde"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"

                    android:text="TextView"
                    android:textColor="@color/colorPrimary" />
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/ic_baseline_volume_up_24" />
            </LinearLayout>

            <TextView
                android:id="@+id/editTraduccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:hint="@string/traduccion"
                android:importantForAutofill="no"
                android:maxLines="6"
                android:minHeight="180sp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingRight="20dp"
                android:scrollbars="vertical"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="10sp"
                    android:src="@drawable/ic_baseline_share_24" />
                <ImageView
                    android:id="@+id/copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="10sp"
                    android:src="@drawable/ic_baseline_content_copy_24" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>